ply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program_aux main
Rule 2     program -> main
Rule 3     program_aux -> program_aux function
Rule 4     program_aux -> function
Rule 5     function -> function_header function_body
Rule 6     main -> FUNCTION MAIN function_body
Rule 7     function_header -> FUNCTION ID L_PARENS function_params R_PARENS COLON function_type
Rule 8     function_header -> FUNCTION ID L_PARENS R_PARENS COLON function_type
Rule 9     function_body -> L_KEY_BRACKET function_body_aux function_body_aux_2 R_KEY_BRACKET
Rule 10    function_body -> L_KEY_BRACKET function_body_aux_2 R_KEY_BRACKET
Rule 11    function_body_aux -> var function_body_aux
Rule 12    function_body_aux -> var
Rule 13    function_body_aux_2 -> statement function_body_aux_2
Rule 14    function_body_aux_2 -> statement
Rule 15    function_params -> type ID array_index COMMA function_params
Rule 16    function_params -> type ID array_index
Rule 17    function_params -> type ID COMMA function_params
Rule 18    function_params -> type ID
Rule 19    function_type -> type
Rule 20    function_type -> VOID
Rule 21    var -> type ID array_dim var_aux
Rule 22    var -> type ID array_dim
Rule 23    var -> type ID var_aux
Rule 24    var -> type ID
Rule 25    var_aux -> COMMA ID array_dim var_aux
Rule 26    var_aux -> COMMA ID array_dim
Rule 27    var_aux -> COMMA ID var_aux
Rule 28    var_aux -> COMMA ID
Rule 29    statement -> statement_aux SEMICOLON
Rule 30    statement_aux -> assignment
Rule 31    statement_aux -> function_call
Rule 32    statement_aux -> return
Rule 33    statement_aux -> if
Rule 34    statement_aux -> while
Rule 35    statement_aux -> print
Rule 36    type -> INT
Rule 37    type -> FLOAT
Rule 38    type -> STRING
Rule 39    array_index -> L_SQUARE_BRACKET expression R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
Rule 40    array_index -> L_SQUARE_BRACKET expression R_SQUARE_BRACKET
Rule 41    array_dim -> L_SQUARE_BRACKET CONST_I R_SQUARE_BRACKET L_SQUARE_BRACKET CONST_I R_SQUARE_BRACKET
Rule 42    array_dim -> L_SQUARE_BRACKET CONST_I R_SQUARE_BRACKET
Rule 43    assignment -> ID array_index EQUALS expression
Rule 44    assignment -> ID array_index EQUALS read
Rule 45    assignment -> ID EQUALS expression
Rule 46    assignment -> ID EQUALS read
Rule 47    function_call -> ID params_pass
Rule 48    return -> RETURN expression
Rule 49    if -> IF L_PARENS expression R_PARENS block elif else
Rule 50    if -> IF L_PARENS expression R_PARENS block elif
Rule 51    if -> IF L_PARENS expression R_PARENS block else
Rule 52    if -> IF L_PARENS expression R_PARENS block
Rule 53    elif -> ELIF L_PARENS expression R_PARENS block elif
Rule 54    elif -> ELIF L_PARENS expression R_PARENS block
Rule 55    else -> ELSE block
Rule 56    while -> WHILE L_PARENS expression R_PARENS block
Rule 57    print -> PRINT L_PARENS print_aux R_PARENS
Rule 58    print -> PRINT L_PARENS R_PARENS
Rule 59    print_aux -> CONST_STRING COMMA print_aux
Rule 60    print_aux -> CONST_STRING
Rule 61    print_aux -> ID COMMA print_aux
Rule 62    print_aux -> ID
Rule 63    expression -> exp AND expression
Rule 64    expression -> exp
Rule 65    read -> READ ID
Rule 66    params_pass -> L_PARENS expression params_pass_aux R_PARENS
Rule 67    params_pass -> L_PARENS expression R_PARENS
Rule 68    params_pass -> L_PARENS R_PARENS
Rule 69    params_pass_aux -> COMMA expression params_pass_aux
Rule 70    params_pass_aux -> COMMA expression
Rule 71    block -> L_KEY_BRACKET statement R_KEY_BRACKET
Rule 72    exp -> xp OR exp
Rule 73    exp -> xp
Rule 74    xp -> x log_op x
Rule 75    xp -> x
Rule 76    x -> term x_aux
Rule 77    x -> term
Rule 78    x_aux -> PLUS term x_aux
Rule 79    x_aux -> PLUS term
Rule 80    x_aux -> MINUS term x_aux
Rule 81    x_aux -> MINUS term
Rule 82    log_op -> NOT_EQUAL
Rule 83    log_op -> IS_EQUAL
Rule 84    log_op -> GREATER
Rule 85    log_op -> GREATER_EQ
Rule 86    log_op -> LESS
Rule 87    log_op -> LESS_EQ
Rule 88    term -> factor term_aux
Rule 89    term -> factor
Rule 90    term_aux -> TIMES factor term_aux
Rule 91    term_aux -> TIMES factor
Rule 92    term_aux -> DIVIDE factor term_aux
Rule 93    term_aux -> DIVIDE factor
Rule 94    factor -> NOT factor_aux
Rule 95    factor -> factor_aux
Rule 96    factor_aux -> L_PARENS expression R_PARENS
Rule 97    factor_aux -> PLUS const
Rule 98    factor_aux -> MINUS const
Rule 99    factor_aux -> const
Rule 100   const -> ID
Rule 101   const -> CONST_I
Rule 102   const -> CONST_F
Rule 103   const -> CONST_STRING
Rule 104   const -> function_call
Rule 105   const -> array_access
Rule 106   array_access -> ID array_index

Terminals, with rules where they appear

AND                  : 63
COLON                : 7 8
COMMA                : 15 17 25 26 27 28 59 61 69 70
CONST_F              : 102
CONST_I              : 41 41 42 101
CONST_STRING         : 59 60 103
DIVIDE               : 92 93
ELIF                 : 53 54
ELSE                 : 55
EQUALS               : 43 44 45 46
FLOAT                : 37
FUNCTION             : 6 7 8
GREATER              : 84
GREATER_EQ           : 85
ID                   : 7 8 15 16 17 18 21 22 23 24 25 26 27 28 43 44 45 46 47 61 62 65 100 106
IF                   : 49 50 51 52
INT                  : 36
IS_EQUAL             : 83
LESS                 : 86
LESS_EQ              : 87
L_KEY_BRACKET        : 9 10 71
L_PARENS             : 7 8 49 50 51 52 53 54 56 57 58 66 67 68 96
L_SQUARE_BRACKET     : 39 39 40 41 41 42
MAIN                 : 6
MINUS                : 80 81 98
NOT                  : 94
NOT_EQUAL            : 82
OR                   : 72
PLUS                 : 78 79 97
PRINT                : 57 58
READ                 : 65
RETURN               : 48
R_KEY_BRACKET        : 9 10 71
R_PARENS             : 7 8 49 50 51 52 53 54 56 57 58 66 67 68 96
R_SQUARE_BRACKET     : 39 39 40 41 41 42
SEMICOLON            : 29
STRING               : 38
TIMES                : 90 91
VOID                 : 20
WHILE                : 56
error                : 

Nonterminals, with rules where they appear

array_access         : 105
array_dim            : 21 22 25 26
array_index          : 15 16 43 44 106
assignment           : 30
block                : 49 50 51 52 53 54 55 56
const                : 97 98 99
elif                 : 49 50 53
else                 : 49 51
exp                  : 63 64 72
expression           : 39 39 40 43 45 48 49 50 51 52 53 54 56 63 66 67 69 70 96
factor               : 88 89 90 91 92 93
factor_aux           : 94 95
function             : 3 4
function_body        : 5 6
function_body_aux    : 9 11
function_body_aux_2  : 9 10 13
function_call        : 31 104
function_header      : 5
function_params      : 7 15 17
function_type        : 7 8
if                   : 33
log_op               : 74
main                 : 1 2
params_pass          : 47
params_pass_aux      : 66 69
print                : 35
print_aux            : 57 59 61
program              : 0
program_aux          : 1 3
read                 : 44 46
return               : 32
statement            : 13 14 71
statement_aux        : 29
term                 : 76 77 78 79 80 81
term_aux             : 88 90 92
type                 : 15 16 17 18 19 21 22 23 24
var                  : 11 12
var_aux              : 21 23 25 27
while                : 34
x                    : 74 74 75
x_aux                : 76 78 80
xp                   : 72 73

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_aux main
    (2) program -> . main
    (3) program_aux -> . program_aux function
    (4) program_aux -> . function
    (6) main -> . FUNCTION MAIN function_body
    (5) function -> . function_header function_body
    (7) function_header -> . FUNCTION ID L_PARENS function_params R_PARENS COLON function_type
    (8) function_header -> . FUNCTION ID L_PARENS R_PARENS COLON function_type

    FUNCTION        shift and go to state 5

    program                        shift and go to state 1
    program_aux                    shift and go to state 2
    main                           shift and go to state 3
    function                       shift and go to state 4
    function_header                shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> program_aux . main
    (3) program_aux -> program_aux . function
    (6) main -> . FUNCTION MAIN function_body
    (5) function -> . function_header function_body
    (7) function_header -> . FUNCTION ID L_PARENS function_params R_PARENS COLON function_type
    (8) function_header -> . FUNCTION ID L_PARENS R_PARENS COLON function_type

    FUNCTION        shift and go to state 5

    main                           shift and go to state 7
    function                       shift and go to state 8
    function_header                shift and go to state 6

state 3

    (2) program -> main .

    $end            reduce using rule 2 (program -> main .)


state 4

    (4) program_aux -> function .

    FUNCTION        reduce using rule 4 (program_aux -> function .)


state 5

    (6) main -> FUNCTION . MAIN function_body
    (7) function_header -> FUNCTION . ID L_PARENS function_params R_PARENS COLON function_type
    (8) function_header -> FUNCTION . ID L_PARENS R_PARENS COLON function_type

    MAIN            shift and go to state 9
    ID              shift and go to state 10


state 6

    (5) function -> function_header . function_body
    (9) function_body -> . L_KEY_BRACKET function_body_aux function_body_aux_2 R_KEY_BRACKET
    (10) function_body -> . L_KEY_BRACKET function_body_aux_2 R_KEY_BRACKET

    L_KEY_BRACKET   shift and go to state 12

    function_body                  shift and go to state 11

state 7

    (1) program -> program_aux main .

    $end            reduce using rule 1 (program -> program_aux main .)


state 8

    (3) program_aux -> program_aux function .

    FUNCTION        reduce using rule 3 (program_aux -> program_aux function .)


state 9

    (6) main -> FUNCTION MAIN . function_body
    (9) function_body -> . L_KEY_BRACKET function_body_aux function_body_aux_2 R_KEY_BRACKET
    (10) function_body -> . L_KEY_BRACKET function_body_aux_2 R_KEY_BRACKET

    L_KEY_BRACKET   shift and go to state 12

    function_body                  shift and go to state 13

state 10

    (7) function_header -> FUNCTION ID . L_PARENS function_params R_PARENS COLON function_type
    (8) function_header -> FUNCTION ID . L_PARENS R_PARENS COLON function_type

    L_PARENS        shift and go to state 14


state 11

    (5) function -> function_header function_body .

    FUNCTION        reduce using rule 5 (function -> function_header function_body .)


state 12

    (9) function_body -> L_KEY_BRACKET . function_body_aux function_body_aux_2 R_KEY_BRACKET
    (10) function_body -> L_KEY_BRACKET . function_body_aux_2 R_KEY_BRACKET
    (11) function_body_aux -> . var function_body_aux
    (12) function_body_aux -> . var
    (13) function_body_aux_2 -> . statement function_body_aux_2
    (14) function_body_aux_2 -> . statement
    (21) var -> . type ID array_dim var_aux
    (22) var -> . type ID array_dim
    (23) var -> . type ID var_aux
    (24) var -> . type ID
    (29) statement -> . statement_aux SEMICOLON
    (36) type -> . INT
    (37) type -> . FLOAT
    (38) type -> . STRING
    (30) statement_aux -> . assignment
    (31) statement_aux -> . function_call
    (32) statement_aux -> . return
    (33) statement_aux -> . if
    (34) statement_aux -> . while
    (35) statement_aux -> . print
    (43) assignment -> . ID array_index EQUALS expression
    (44) assignment -> . ID array_index EQUALS read
    (45) assignment -> . ID EQUALS expression
    (46) assignment -> . ID EQUALS read
    (47) function_call -> . ID params_pass
    (48) return -> . RETURN expression
    (49) if -> . IF L_PARENS expression R_PARENS block elif else
    (50) if -> . IF L_PARENS expression R_PARENS block elif
    (51) if -> . IF L_PARENS expression R_PARENS block else
    (52) if -> . IF L_PARENS expression R_PARENS block
    (56) while -> . WHILE L_PARENS expression R_PARENS block
    (57) print -> . PRINT L_PARENS print_aux R_PARENS
    (58) print -> . PRINT L_PARENS R_PARENS

    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    STRING          shift and go to state 24
    ID              shift and go to state 20
    RETURN          shift and go to state 31
    IF              shift and go to state 32
    WHILE           shift and go to state 33
    PRINT           shift and go to state 34

    function_body_aux              shift and go to state 15
    function_body_aux_2            shift and go to state 16
    var                            shift and go to state 17
    statement                      shift and go to state 18
    type                           shift and go to state 19
    statement_aux                  shift and go to state 21
    assignment                     shift and go to state 25
    function_call                  shift and go to state 26
    return                         shift and go to state 27
    if                             shift and go to state 28
    while                          shift and go to state 29
    print                          shift and go to state 30

state 13

    (6) main -> FUNCTION MAIN function_body .

    $end            reduce using rule 6 (main -> FUNCTION MAIN function_body .)


state 14

    (7) function_header -> FUNCTION ID L_PARENS . function_params R_PARENS COLON function_type
    (8) function_header -> FUNCTION ID L_PARENS . R_PARENS COLON function_type
    (15) function_params -> . type ID array_index COMMA function_params
    (16) function_params -> . type ID array_index
    (17) function_params -> . type ID COMMA function_params
    (18) function_params -> . type ID
    (36) type -> . INT
    (37) type -> . FLOAT
    (38) type -> . STRING

    R_PARENS        shift and go to state 36
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    STRING          shift and go to state 24

    function_params                shift and go to state 35
    type                           shift and go to state 37

state 15

    (9) function_body -> L_KEY_BRACKET function_body_aux . function_body_aux_2 R_KEY_BRACKET
    (13) function_body_aux_2 -> . statement function_body_aux_2
    (14) function_body_aux_2 -> . statement
    (29) statement -> . statement_aux SEMICOLON
    (30) statement_aux -> . assignment
    (31) statement_aux -> . function_call
    (32) statement_aux -> . return
    (33) statement_aux -> . if
    (34) statement_aux -> . while
    (35) statement_aux -> . print
    (43) assignment -> . ID array_index EQUALS expression
    (44) assignment -> . ID array_index EQUALS read
    (45) assignment -> . ID EQUALS expression
    (46) assignment -> . ID EQUALS read
    (47) function_call -> . ID params_pass
    (48) return -> . RETURN expression
    (49) if -> . IF L_PARENS expression R_PARENS block elif else
    (50) if -> . IF L_PARENS expression R_PARENS block elif
    (51) if -> . IF L_PARENS expression R_PARENS block else
    (52) if -> . IF L_PARENS expression R_PARENS block
    (56) while -> . WHILE L_PARENS expression R_PARENS block
    (57) print -> . PRINT L_PARENS print_aux R_PARENS
    (58) print -> . PRINT L_PARENS R_PARENS

    ID              shift and go to state 20
    RETURN          shift and go to state 31
    IF              shift and go to state 32
    WHILE           shift and go to state 33
    PRINT           shift and go to state 34

    function_body_aux_2            shift and go to state 38
    statement                      shift and go to state 18
    statement_aux                  shift and go to state 21
    assignment                     shift and go to state 25
    function_call                  shift and go to state 26
    return                         shift and go to state 27
    if                             shift and go to state 28
    while                          shift and go to state 29
    print                          shift and go to state 30

state 16

    (10) function_body -> L_KEY_BRACKET function_body_aux_2 . R_KEY_BRACKET

    R_KEY_BRACKET   shift and go to state 39


state 17

    (11) function_body_aux -> var . function_body_aux
    (12) function_body_aux -> var .
    (11) function_body_aux -> . var function_body_aux
    (12) function_body_aux -> . var
    (21) var -> . type ID array_dim var_aux
    (22) var -> . type ID array_dim
    (23) var -> . type ID var_aux
    (24) var -> . type ID
    (36) type -> . INT
    (37) type -> . FLOAT
    (38) type -> . STRING

    ID              reduce using rule 12 (function_body_aux -> var .)
    RETURN          reduce using rule 12 (function_body_aux -> var .)
    IF              reduce using rule 12 (function_body_aux -> var .)
    WHILE           reduce using rule 12 (function_body_aux -> var .)
    PRINT           reduce using rule 12 (function_body_aux -> var .)
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    STRING          shift and go to state 24

    var                            shift and go to state 17
    function_body_aux              shift and go to state 40
    type                           shift and go to state 19

state 18

    (13) function_body_aux_2 -> statement . function_body_aux_2
    (14) function_body_aux_2 -> statement .
    (13) function_body_aux_2 -> . statement function_body_aux_2
    (14) function_body_aux_2 -> . statement
    (29) statement -> . statement_aux SEMICOLON
    (30) statement_aux -> . assignment
    (31) statement_aux -> . function_call
    (32) statement_aux -> . return
    (33) statement_aux -> . if
    (34) statement_aux -> . while
    (35) statement_aux -> . print
    (43) assignment -> . ID array_index EQUALS expression
    (44) assignment -> . ID array_index EQUALS read
    (45) assignment -> . ID EQUALS expression
    (46) assignment -> . ID EQUALS read
    (47) function_call -> . ID params_pass
    (48) return -> . RETURN expression
    (49) if -> . IF L_PARENS expression R_PARENS block elif else
    (50) if -> . IF L_PARENS expression R_PARENS block elif
    (51) if -> . IF L_PARENS expression R_PARENS block else
    (52) if -> . IF L_PARENS expression R_PARENS block
    (56) while -> . WHILE L_PARENS expression R_PARENS block
    (57) print -> . PRINT L_PARENS print_aux R_PARENS
    (58) print -> . PRINT L_PARENS R_PARENS

    R_KEY_BRACKET   reduce using rule 14 (function_body_aux_2 -> statement .)
    ID              shift and go to state 20
    RETURN          shift and go to state 31
    IF              shift and go to state 32
    WHILE           shift and go to state 33
    PRINT           shift and go to state 34

    statement                      shift and go to state 18
    function_body_aux_2            shift and go to state 41
    statement_aux                  shift and go to state 21
    assignment                     shift and go to state 25
    function_call                  shift and go to state 26
    return                         shift and go to state 27
    if                             shift and go to state 28
    while                          shift and go to state 29
    print                          shift and go to state 30

state 19

    (21) var -> type . ID array_dim var_aux
    (22) var -> type . ID array_dim
    (23) var -> type . ID var_aux
    (24) var -> type . ID

    ID              shift and go to state 42


state 20

    (43) assignment -> ID . array_index EQUALS expression
    (44) assignment -> ID . array_index EQUALS read
    (45) assignment -> ID . EQUALS expression
    (46) assignment -> ID . EQUALS read
    (47) function_call -> ID . params_pass
    (39) array_index -> . L_SQUARE_BRACKET expression R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
    (40) array_index -> . L_SQUARE_BRACKET expression R_SQUARE_BRACKET
    (66) params_pass -> . L_PARENS expression params_pass_aux R_PARENS
    (67) params_pass -> . L_PARENS expression R_PARENS
    (68) params_pass -> . L_PARENS R_PARENS

    EQUALS          shift and go to state 44
    L_SQUARE_BRACKET shift and go to state 46
    L_PARENS        shift and go to state 47

    array_index                    shift and go to state 43
    params_pass                    shift and go to state 45

state 21

    (29) statement -> statement_aux . SEMICOLON

    SEMICOLON       shift and go to state 48


state 22

    (36) type -> INT .

    ID              reduce using rule 36 (type -> INT .)
    L_KEY_BRACKET   reduce using rule 36 (type -> INT .)


state 23

    (37) type -> FLOAT .

    ID              reduce using rule 37 (type -> FLOAT .)
    L_KEY_BRACKET   reduce using rule 37 (type -> FLOAT .)


state 24

    (38) type -> STRING .

    ID              reduce using rule 38 (type -> STRING .)
    L_KEY_BRACKET   reduce using rule 38 (type -> STRING .)


state 25

    (30) statement_aux -> assignment .

    SEMICOLON       reduce using rule 30 (statement_aux -> assignment .)


state 26

    (31) statement_aux -> function_call .

    SEMICOLON       reduce using rule 31 (statement_aux -> function_call .)


state 27

    (32) statement_aux -> return .

    SEMICOLON       reduce using rule 32 (statement_aux -> return .)


state 28

    (33) statement_aux -> if .

    SEMICOLON       reduce using rule 33 (statement_aux -> if .)


state 29

    (34) statement_aux -> while .

    SEMICOLON       reduce using rule 34 (statement_aux -> while .)


state 30

    (35) statement_aux -> print .

    SEMICOLON       reduce using rule 35 (statement_aux -> print .)


state 31

    (48) return -> RETURN . expression
    (63) expression -> . exp AND expression
    (64) expression -> . exp
    (72) exp -> . xp OR exp
    (73) exp -> . xp
    (74) xp -> . x log_op x
    (75) xp -> . x
    (76) x -> . term x_aux
    (77) x -> . term
    (88) term -> . factor term_aux
    (89) term -> . factor
    (94) factor -> . NOT factor_aux
    (95) factor -> . factor_aux
    (96) factor_aux -> . L_PARENS expression R_PARENS
    (97) factor_aux -> . PLUS const
    (98) factor_aux -> . MINUS const
    (99) factor_aux -> . const
    (100) const -> . ID
    (101) const -> . CONST_I
    (102) const -> . CONST_F
    (103) const -> . CONST_STRING
    (104) const -> . function_call
    (105) const -> . array_access
    (47) function_call -> . ID params_pass
    (106) array_access -> . ID array_index

    NOT             shift and go to state 55
    L_PARENS        shift and go to state 57
    PLUS            shift and go to state 58
    MINUS           shift and go to state 60
    ID              shift and go to state 61
    CONST_I         shift and go to state 62
    CONST_F         shift and go to state 63
    CONST_STRING    shift and go to state 64

    expression                     shift and go to state 49
    exp                            shift and go to state 50
    xp                             shift and go to state 51
    x                              shift and go to state 52
    term                           shift and go to state 53
    factor                         shift and go to state 54
    factor_aux                     shift and go to state 56
    const                          shift and go to state 59
    function_call                  shift and go to state 65
    array_access                   shift and go to state 66

state 32

    (49) if -> IF . L_PARENS expression R_PARENS block elif else
    (50) if -> IF . L_PARENS expression R_PARENS block elif
    (51) if -> IF . L_PARENS expression R_PARENS block else
    (52) if -> IF . L_PARENS expression R_PARENS block

    L_PARENS        shift and go to state 67


state 33

    (56) while -> WHILE . L_PARENS expression R_PARENS block

    L_PARENS        shift and go to state 68


state 34

    (57) print -> PRINT . L_PARENS print_aux R_PARENS
    (58) print -> PRINT . L_PARENS R_PARENS

    L_PARENS        shift and go to state 69


state 35

    (7) function_header -> FUNCTION ID L_PARENS function_params . R_PARENS COLON function_type

    R_PARENS        shift and go to state 70


state 36

    (8) function_header -> FUNCTION ID L_PARENS R_PARENS . COLON function_type

    COLON           shift and go to state 71


state 37

    (15) function_params -> type . ID array_index COMMA function_params
    (16) function_params -> type . ID array_index
    (17) function_params -> type . ID COMMA function_params
    (18) function_params -> type . ID

    ID              shift and go to state 72


state 38

    (9) function_body -> L_KEY_BRACKET function_body_aux function_body_aux_2 . R_KEY_BRACKET

    R_KEY_BRACKET   shift and go to state 73


state 39

    (10) function_body -> L_KEY_BRACKET function_body_aux_2 R_KEY_BRACKET .

    FUNCTION        reduce using rule 10 (function_body -> L_KEY_BRACKET function_body_aux_2 R_KEY_BRACKET .)
    $end            reduce using rule 10 (function_body -> L_KEY_BRACKET function_body_aux_2 R_KEY_BRACKET .)


state 40

    (11) function_body_aux -> var function_body_aux .

    ID              reduce using rule 11 (function_body_aux -> var function_body_aux .)
    RETURN          reduce using rule 11 (function_body_aux -> var function_body_aux .)
    IF              reduce using rule 11 (function_body_aux -> var function_body_aux .)
    WHILE           reduce using rule 11 (function_body_aux -> var function_body_aux .)
    PRINT           reduce using rule 11 (function_body_aux -> var function_body_aux .)


state 41

    (13) function_body_aux_2 -> statement function_body_aux_2 .

    R_KEY_BRACKET   reduce using rule 13 (function_body_aux_2 -> statement function_body_aux_2 .)


state 42

    (21) var -> type ID . array_dim var_aux
    (22) var -> type ID . array_dim
    (23) var -> type ID . var_aux
    (24) var -> type ID .
    (41) array_dim -> . L_SQUARE_BRACKET CONST_I R_SQUARE_BRACKET L_SQUARE_BRACKET CONST_I R_SQUARE_BRACKET
    (42) array_dim -> . L_SQUARE_BRACKET CONST_I R_SQUARE_BRACKET
    (25) var_aux -> . COMMA ID array_dim var_aux
    (26) var_aux -> . COMMA ID array_dim
    (27) var_aux -> . COMMA ID var_aux
    (28) var_aux -> . COMMA ID

    INT             reduce using rule 24 (var -> type ID .)
    FLOAT           reduce using rule 24 (var -> type ID .)
    STRING          reduce using rule 24 (var -> type ID .)
    ID              reduce using rule 24 (var -> type ID .)
    RETURN          reduce using rule 24 (var -> type ID .)
    IF              reduce using rule 24 (var -> type ID .)
    WHILE           reduce using rule 24 (var -> type ID .)
    PRINT           reduce using rule 24 (var -> type ID .)
    L_SQUARE_BRACKET shift and go to state 76
    COMMA           shift and go to state 77

    array_dim                      shift and go to state 74
    var_aux                        shift and go to state 75

state 43

    (43) assignment -> ID array_index . EQUALS expression
    (44) assignment -> ID array_index . EQUALS read

    EQUALS          shift and go to state 78


state 44

    (45) assignment -> ID EQUALS . expression
    (46) assignment -> ID EQUALS . read
    (63) expression -> . exp AND expression
    (64) expression -> . exp
    (65) read -> . READ ID
    (72) exp -> . xp OR exp
    (73) exp -> . xp
    (74) xp -> . x log_op x
    (75) xp -> . x
    (76) x -> . term x_aux
    (77) x -> . term
    (88) term -> . factor term_aux
    (89) term -> . factor
    (94) factor -> . NOT factor_aux
    (95) factor -> . factor_aux
    (96) factor_aux -> . L_PARENS expression R_PARENS
    (97) factor_aux -> . PLUS const
    (98) factor_aux -> . MINUS const
    (99) factor_aux -> . const
    (100) const -> . ID
    (101) const -> . CONST_I
    (102) const -> . CONST_F
    (103) const -> . CONST_STRING
    (104) const -> . function_call
    (105) const -> . array_access
    (47) function_call -> . ID params_pass
    (106) array_access -> . ID array_index

    READ            shift and go to state 81
    NOT             shift and go to state 55
    L_PARENS        shift and go to state 57
    PLUS            shift and go to state 58
    MINUS           shift and go to state 60
    ID              shift and go to state 61
    CONST_I         shift and go to state 62
    CONST_F         shift and go to state 63
    CONST_STRING    shift and go to state 64

    expression                     shift and go to state 79
    read                           shift and go to state 80
    exp                            shift and go to state 50
    xp                             shift and go to state 51
    x                              shift and go to state 52
    term                           shift and go to state 53
    factor                         shift and go to state 54
    factor_aux                     shift and go to state 56
    const                          shift and go to state 59
    function_call                  shift and go to state 65
    array_access                   shift and go to state 66

state 45

    (47) function_call -> ID params_pass .

    SEMICOLON       reduce using rule 47 (function_call -> ID params_pass .)
    TIMES           reduce using rule 47 (function_call -> ID params_pass .)
    DIVIDE          reduce using rule 47 (function_call -> ID params_pass .)
    PLUS            reduce using rule 47 (function_call -> ID params_pass .)
    MINUS           reduce using rule 47 (function_call -> ID params_pass .)
    NOT_EQUAL       reduce using rule 47 (function_call -> ID params_pass .)
    IS_EQUAL        reduce using rule 47 (function_call -> ID params_pass .)
    GREATER         reduce using rule 47 (function_call -> ID params_pass .)
    GREATER_EQ      reduce using rule 47 (function_call -> ID params_pass .)
    LESS            reduce using rule 47 (function_call -> ID params_pass .)
    LESS_EQ         reduce using rule 47 (function_call -> ID params_pass .)
    OR              reduce using rule 47 (function_call -> ID params_pass .)
    AND             reduce using rule 47 (function_call -> ID params_pass .)
    R_SQUARE_BRACKET reduce using rule 47 (function_call -> ID params_pass .)
    R_PARENS        reduce using rule 47 (function_call -> ID params_pass .)
    COMMA           reduce using rule 47 (function_call -> ID params_pass .)


state 46

    (39) array_index -> L_SQUARE_BRACKET . expression R_SQUARE_BRACKET L_SQUARE_BRACKET expression R_SQUARE_BRACKET
    (40) array_index -> L_SQUARE_BRACKET . expression R_SQUARE_BRACKET
    (63) expression -> . exp AND expression
    (64) expression -> . exp
    (72) exp -> . xp OR exp
    (73) exp -> . xp
    (74) xp -> . x log_op x
    (75) xp -> . x
    (76) x -> . term x_aux
    (77) x -> . term
    (88) term -> . factor term_aux
    (89) term -> . factor
    (94) factor -> . NOT factor_aux
    (95) factor -> . factor_aux
    (96) factor_aux -> . L_PARENS expression R_PARENS
    (97) factor_aux -> . PLUS const
    (98) factor_aux -> . MINUS const
    (99) factor_aux -> . const
    (100) const -> . ID
    (101) const -> . CONST_I
    (102) const -> . CONST_F
    (103) const -> . CONST_STRING
    (104) const -> . function_call
    (105) const -> . array_access
    (47) function_call -> . ID params_pass
    (106) array_access -> . ID array_index

    NOT             shift and go to state 55
    L_PARENS        shift and go to state 57
    PLUS            shift and go to state 58
    MINUS           shift and go to state 60
    ID              shift and go to state 61
    CONST_I         shift and go to state 62
    CONST_F         shift and go to state 63
    CONST_STRING    shift and go to state 64

    expression                     shift and go to state 82
    exp                            shift and go to state 50
    xp                             shift and go to state 51
    x                              shift and go to state 52
    term                           shift and go to state 53
    factor                         shift and go to state 54
    factor_aux                     shift and go to state 56
    const                          shift and go to state 59
    function_call                  shift and go to state 65
    array_access                   shift and go to state 66

state 47

    (66) params_pass -> L_PARENS . expression params_pass_aux R_PARENS
    (67) params_pass -> L_PARENS . expression R_PARENS
    (68) params_pass -> L_PARENS . R_PARENS
    (63) expression -> . exp AND expression
    (64) expression -> . exp
    (72) exp -> . xp OR exp
    (73) exp -> . xp
    (74) xp -> . x log_op x
    (75) xp -> . x
    (76) x -> . term x_aux
    (77) x -> . term
    (88) term -> . factor term_aux
    (89) term -> . factor
    (94) factor -> . NOT factor_aux
    (95) factor -> . factor_aux
    (96) factor_aux -> . L_PARENS expression R_PARENS
    (97) factor_aux -> . PLUS const
    (98) factor_aux -> . MINUS const
    (99) factor_aux -> . const
    (100) const -> . ID
    (101) const -> . CONST_I
    (102) const -> . CONST_F
    (103) const -> . CONST_STRING
    (104) const -> . function_call
    (105) const -> . array_access
    (47) function_call -> . ID params_pass
    (106) array_access -> . ID array_index

    R_PARENS        shift and go to state 84
    NOT             shift and go to state 55
    L_PARENS        shift and go to state 57
    PLUS            shift and go to state 58
    MINUS           shift and go to state 60
    ID              shift and go to state 61
    CONST_I         shift and go to state 62
    CONST_F         shift and go to state 63
    CONST_STRING    shift and go to state 64

    expression                     shift and go to state 83
    exp                            shift and go to state 50
    xp                             shift and go to state 51
    x                              shift and go to state 52
    term                           shift and go to state 53
    factor                         shift and go to state 54
    factor_aux                     shift and go to state 56
    const                          shift and go to state 59
    function_call                  shift and go to state 65
    array_access                   shift and go to state 66

state 48

    (29) statement -> statement_aux SEMICOLON .

    ID              reduce using rule 29 (statement -> statement_aux SEMICOLON .)
    RETURN          reduce using rule 29 (statement -> statement_aux SEMICOLON .)
    IF              reduce using rule 29 (statement -> statement_aux SEMICOLON .)
    WHILE           reduce using rule 29 (statement -> statement_aux SEMICOLON .)
    PRINT           reduce using rule 29 (statement -> statement_aux SEMICOLON .)
    R_KEY_BRACKET   reduce using rule 29 (statement -> statement_aux SEMICOLON .)


state 49

    (48) return -> RETURN expression .

    SEMICOLON       reduce using rule 48 (return -> RETURN expression .)


state 50

    (63) expression -> exp . AND expression
    (64) expression -> exp .

    AND             shift and go to state 85
    SEMICOLON       reduce using rule 64 (expression -> exp .)
    R_SQUARE_BRACKET reduce using rule 64 (expression -> exp .)
    R_PARENS        reduce using rule 64 (expression -> exp .)
    COMMA           reduce using rule 64 (expression -> exp .)


state 51

    (72) exp -> xp . OR exp
    (73) exp -> xp .

    OR              shift and go to state 86
    AND             reduce using rule 73 (exp -> xp .)
    SEMICOLON       reduce using rule 73 (exp -> xp .)
    R_SQUARE_BRACKET reduce using rule 73 (exp -> xp .)
    R_PARENS        reduce using rule 73 (exp -> xp .)
    COMMA           reduce using rule 73 (exp -> xp .)


state 52
